# telepathy

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.claude/: settings.local.json
scripts/: dev_debug_app.sh  setup_autoavsr_assets.sh  setup_python_env.sh
server/: main.py  model.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
