[project]
name = "telepathy-py"
version = "0.1.0"
description = "Python backend and model runtime for Telepathy"
requires-python = ">=3.10,<3.11"
dependencies = [
  "av>=10.0.0",
  "fastapi>=0.111",
  "gdown>=5.2.0",
  "hydra-core>=1.3.2",
  "mediapipe==0.10.8",
  "opencv-python>=4.5.5.62",
  "scikit-image>=0.13.0",
  "scipy>=1.3.0",
  "six>=1.16.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchvision==0.25.0",
  "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false
